# practica-drf

./: README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml
prueba/conf/: asgi.py  settings.py  wsgi.py
